# user-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Taskfile.yml  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: arquiteto-back.md  bug-fix.md  cyber-sec.md  dev-back.md  devops.md  qa.md  revisor.md
.claude/scripts/: bloquear-push-direto.sh
.github/workflows/: ci.yml  pr-checks.yml  quality.yml  release.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
migrations/: env.py
migrations/versions/: 20260715174647_create_users_table.py  20260715222628_add_email_verification.py
specs/001-user-crud-api/: plan.md  spec.md  tasks.md
specs/002-user-registration/: plan.md  spec.md  tasks.md
src/user_api/: config.py
tests/: db_conftest.py
tests/contract/: test_auth.py  test_change_password.py  test_confirm.py  test_create_user.py  test_delete_user.py  test_email_verified_field.py  test_error_format_consistency.py  test_get_user.py  test_health.py  test_list_users.py  test_list_users_pagination.py  test_register.py  test_resend.py  test_unhandled_exception.py  test_update_user.py
tests/integration/: conftest.py  test_create_user_concurrency.py  test_session_wiring.py  test_token_repository.py  test_user_repository.py
tests/unit/: fakes.py  test_change_password.py  test_config.py  test_confirm_email.py  test_console_email_sender.py  test_create_user.py  test_delete_user.py  test_entities.py  test_ip_rate_limiter.py  test_query_users.py  (+4 more)
(+23 files in other folders)
