[project]
name = "user-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "httpx>=0.28.1",
    "mypy>=2.3.0",
    "pip-audit>=2.10.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
    "testcontainers[postgres]>=4.14.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
# SQLAlchemy's async engine bridges awaits to sync DBAPI calls via greenlet on a
# worker thread; without this, coverage.py silently misses lines that execute
# right after a DB-bound await (false "missing" lines despite the test passing).
concurrency = ["thread", "greenlet"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: FastAPI's Depends()-as-default is the framework's documented DI idiom.
ignore = ["B008"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true
